; ModuleID = '/home/carl/AnghaBench/curl/docs/examples/extr_postinmemory.c_WriteMemoryCallback.c'
source_filename = "/home/carl/AnghaBench/curl/docs/examples/extr_postinmemory.c_WriteMemoryCallback.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.MemoryStruct = type { i8*, i64 }

@.str = private unnamed_addr constant [43 x i8] c"not enough memory (realloc returned NULL)\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i8*, i64, i64, i8*)* @WriteMemoryCallback to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @WriteMemoryCallback(i8* %0, i64 %1, i64 %2, i8* %3) #0 {
  %5 = alloca i64, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i64, align 8
  %11 = alloca %struct.MemoryStruct*, align 8
  %12 = alloca i8*, align 8
  store i8* %0, i8** %6, align 8
  store i64 %1, i64* %7, align 8
  store i64 %2, i64* %8, align 8
  store i8* %3, i8** %9, align 8
  %13 = load i64, i64* %7, align 8
  %14 = load i64, i64* %8, align 8
  %15 = mul i64 %13, %14
  store i64 %15, i64* %10, align 8
  %16 = load i8*, i8** %9, align 8
  %17 = bitcast i8* %16 to %struct.MemoryStruct*
  store %struct.MemoryStruct* %17, %struct.MemoryStruct** %11, align 8
  %18 = load %struct.MemoryStruct*, %struct.MemoryStruct** %11, align 8
  %19 = getelementptr inbounds %struct.MemoryStruct, %struct.MemoryStruct* %18, i32 0, i32 0
  %20 = load i8*, i8** %19, align 8
  %21 = load %struct.MemoryStruct*, %struct.MemoryStruct** %11, align 8
  %22 = getelementptr inbounds %struct.MemoryStruct, %struct.MemoryStruct* %21, i32 0, i32 1
  %23 = load i64, i64* %22, align 8
  %24 = load i64, i64* %10, align 8
  %25 = add i64 %23, %24
  %26 = add i64 %25, 1
  %27 = call i8* @realloc(i8* %20, i64 %26)
  store i8* %27, i8** %12, align 8
  %28 = load i8*, i8** %12, align 8
  %29 = icmp ne i8* %28, null
  br i1 %29, label %32, label %30

30:                                               ; preds = %4
  %31 = call i32 @printf(i8* getelementptr inbounds ([43 x i8], [43 x i8]* @.str, i64 0, i64 0))
  store i64 0, i64* %5, align 8
  br label %59

32:                                               ; preds = %4
  %33 = load i8*, i8** %12, align 8
  %34 = load %struct.MemoryStruct*, %struct.MemoryStruct** %11, align 8
  %35 = getelementptr inbounds %struct.MemoryStruct, %struct.MemoryStruct* %34, i32 0, i32 0
  store i8* %33, i8** %35, align 8
  %36 = load %struct.MemoryStruct*, %struct.MemoryStruct** %11, align 8
  %37 = getelementptr inbounds %struct.MemoryStruct, %struct.MemoryStruct* %36, i32 0, i32 0
  %38 = load i8*, i8** %37, align 8
  %39 = load %struct.MemoryStruct*, %struct.MemoryStruct** %11, align 8
  %40 = getelementptr inbounds %struct.MemoryStruct, %struct.MemoryStruct* %39, i32 0, i32 1
  %41 = load i64, i64* %40, align 8
  %42 = getelementptr inbounds i8, i8* %38, i64 %41
  %43 = load i8*, i8** %6, align 8
  %44 = load i64, i64* %10, align 8
  %45 = call i32 @memcpy(i8* %42, i8* %43, i64 %44)
  %46 = load i64, i64* %10, align 8
  %47 = load %struct.MemoryStruct*, %struct.MemoryStruct** %11, align 8
  %48 = getelementptr inbounds %struct.MemoryStruct, %struct.MemoryStruct* %47, i32 0, i32 1
  %49 = load i64, i64* %48, align 8
  %50 = add i64 %49, %46
  store i64 %50, i64* %48, align 8
  %51 = load %struct.MemoryStruct*, %struct.MemoryStruct** %11, align 8
  %52 = getelementptr inbounds %struct.MemoryStruct, %struct.MemoryStruct* %51, i32 0, i32 0
  %53 = load i8*, i8** %52, align 8
  %54 = load %struct.MemoryStruct*, %struct.MemoryStruct** %11, align 8
  %55 = getelementptr inbounds %struct.MemoryStruct, %struct.MemoryStruct* %54, i32 0, i32 1
  %56 = load i64, i64* %55, align 8
  %57 = getelementptr inbounds i8, i8* %53, i64 %56
  store i8 0, i8* %57, align 1
  %58 = load i64, i64* %10, align 8
  store i64 %58, i64* %5, align 8
  br label %59

59:                                               ; preds = %32, %30
  %60 = load i64, i64* %5, align 8
  ret i64 %60
}

declare dso_local i8* @realloc(i8*, i64) #1

declare dso_local i32 @printf(i8*) #1

declare dso_local i32 @memcpy(i8*, i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
